# ocaml-java

./: Dockerfile  LICENSE  Makefile  README.md  cmxa.Makefile  container.sh  dune-project  jar.Makefile  jbuild  ocamljava-jar.opam  ocamljava-javacaml.opam  ocamljava-ppx.opam  ocamljava.opam  ppx.Makefile
camljava/: Java.ml  Makefile  camljava_utils.h  jarray.ml  jarray.mli  java.c  java.ml  java.mli  java_stubs.c  jthrowable.ml  jthrowable.mli
camljava/tests/: Makefile  test.ml
javacaml/: Makefile  caml.c  javacaml_utils.h  string_convertions.c
javacaml/tests/: Makefile  javacaml_test.ml  test.ml
ppx/: README.md  ast_tools.ml  dune  gen.ml  jbuild  mapper.ml  ppx.ml  type_info.ml  unwrap.ml
ppx/tests/: .gitignore  Makefile  dune  input.ml  jbuild  ppx_test.ml  ref.ml  regr_ref
srcs/c/: caml.c  classes.c  classes.h  java_stubs.c  jbuild
srcs/camljava/: camljava.ml  camljava.mli  dune  jbuild  stubs.c
srcs/config/: discover.ml  dune  jbuild
srcs/java/: Makefile  classes.c  classes.h  dune  jarray.ml  jarray.mli  java.ml  java.mli  java_stubs.c  javacaml_utils.h  jbuild  jcall.mli  jclass.mli  jrunnable.ml  jrunnable.mli  jthrowable.ml
srcs/java_stubs/: Makefile  dune  jbuild
tests/: .gitignore  Makefile  dune  jbuild  test.ml  test_caml.ml  test_camljava.ml  test_java.ml  test_javacaml.ml  test_ppx.ml
tests/ocamljava/test/: TestCaml.java  TestJava.java
tests/test/: Test.java
tests/test_java/: Makefile  dune  jbuild  test_java.ml
tests/test_java/ocamljava/test/: TestCaml.java  TestJava.java
tests/test_ml/: dune  jbuild  test_caml.ml
(+52 files in other folders)
